# rust-warp-customers-api

./: Cargo.toml  test.sh
data/: customers.json
src/: db.rs  handlers.rs  main.rs  routes.rs
